--- a/index - Copy.html
+++ b/index - Copy.html
@@ -38,50 +38,64 @@
       </header>
       <main class="col-12 col-lg-9">
         <div class="m-5 row justify-content-around">
-          <div class="col-12 col-md-6 col-xl-3 mb-3"></div>
-          <div class="card">
-            <h4 class="card-header">
-              To Do
-            </h4>
-            <ul id="list-toDo" class="list-group list-group-flush">
-              <li class="list-group-item">
-                <span class="badge badge-primary badge-pill">05/28/2020</span>
-                <p class="m-1">Sample task to do</p>
-              </li>
-            </ul>
+          <div class="col-12 col-md-6 col-xl-3 mb-3">
+            <div class="card">
+              <h4 class="card-header">
+                To Do
+              </h4>
+              <ul id="list-toDo" class="list-group list-group-flush">
+                <li class="list-group-item" id="to-do">
+                  <span class="badge badge-primary badge-pill">05/28/2020</span>
+                  <p class="m-1">Sample task to do</p>
+                </li>
+              </ul>
+            </div>
           </div>
           <!-- end of todo -->
           <!-- in progress start -->
-          <div class="col-12 col-md-6 col-xl-3 mb-3"></div>
-          <div class="card">
-            <h4 class="card-header">
-              In Progress
-            </h4>
-            <ul id="list-toDo" class="list-group list-group-flush">
-              <li class="list-group-item">
+          <div class="col-12 col-md-6 col-xl-3 mb-3">
+            <div class="card">
+              <h4 class="card-header">
+                In Progress
+              </h4>
+              <ul id="list-inProgress" class="list-group">
+              <li class="list-group-item" id="in-progress">
                 <span class="badge badge-primary badge-pill">05/28/2020</span>
-                <p class="m-1">Sample task to do</p>
+                <p class="m-1">Sample task in progress</p>
               </li>
             </ul>
           </div>
-                       
+          </div>
           <!-- in progress end -->
-          <div class="card">
-            <h4 class="card-header">
-              In Review
-            </h4>
-            <ul id="list-toDo" class="list-group list-group-flush">
-              <li class="list-group-item">
+          <!-- in review start -->
+          <div class="col-12 col-md-6 col-xl-3 mb-3">
+            <div class="card">
+              <h4 class="card-header">
+                In Review
+              </h4>
+              <ul id="list-inProgress" class="list-group">
+              <li class="list-group-item" id="in-review">
                 <span class="badge badge-primary badge-pill">05/28/2020</span>
-                <p class="m-1">Sample task to do</p>
+                <p class="m-1">Sample task in Review</p>
               </li>
             </ul>
           </div>
-          <!-- in review start -->
-          <div class="col-12 col-md-6 col-xl-3 mb-3"></div>
+          </div>
           <!-- in review end -->
           <!-- done start -->
-          <div class="col-12 col-md-6 col-xl-3 mb-3"></div>
+          <div class="col-12 col-md-6 col-xl-3 mb-3">
+            <div class="card">
+              <h4 class="card-header">
+                Complete
+              </h4>
+              <ul id="list-inProgress" class="list-group">
+              <li class="list-group-item" id="complete">
+                <span class="badge badge-primary badge-pill">05/28/2020</span>
+                <p class="m-1">Sample task completed</p>
+              </li>
+            </ul>
+          </div>
+          </div>
           <!-- done end -->
         </div>
       </main>
@@ -113,12 +127,13 @@
             <form>
               <div class="form-group">
                 <label for="modalTaskDescription">Task description</label>
-                <textarea id="modalTaskDescription" rows="3"></textarea>
+                <textarea id="modalTaskDescription" rows="3" class="form-control"></textarea>
               </div>
               <div class="form-group">
                 <label for="modalDueDate">Due date</label>
                 <input
                   type="text"
+                  class="form-control"
                   id="modalDueDate"
                   placeholder="mm/dd/yyyy"
                   autocomplete="off"
